# mlops_hw2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dvc_commands  pyproject.toml
.dvc/: config
app/: logging_config.py  main.py  models.py
minio-data/.minio.sys/: format.json
minio-data/.minio.sys/tmp/.trash/051fae16-3b96-4c40-bbaf-98291935514b/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/0dd71fb1-1200-44d4-bad1-840af97af65c/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/11b7def1-1286-40cd-a71d-f6636b17b197/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/13cee05f-d5f1-45c6-a9e9-e67588ce3263/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/145f50d7-fbc8-4417-b80a-726eade59b3c/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/22aeb814-0d0e-48fb-9930-ca39b1fd95fa/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/242d25d5-1cb0-4afa-bfb3-1f9b84e9313a/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/339075de-868a-4026-b9b7-9deddac152f1/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/3cfed3eb-da14-4c14-aa6a-9455e2c5866b/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/579d0394-bbd3-43fd-857f-030273dc2a14/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/58187f49-d002-4cdb-b418-2773d944b045/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/5a453ae1-1fb6-4cc6-9d46-7f31666ed923/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/5a7d881c-7388-4140-9a9a-9c2967d0f9c4/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/600f88f9-5f1b-42fe-9290-a9e3e2406087/: xl.meta.bkp
tests/: test_app.py
(+26 files in other folders)
