[tool.poetry]
name = "mlops-hw1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
scikit-learn = "^1.5.2"
joblib = "^1.4.2"
uvicorn = "^0.32.0"
grpcio = "^1.67.1"
grpcio-tools = "^1.67.1"
streamlit = "^1.40.0"
requests = "^2.32.3"
python-multipart = "^0.0.17"
psutil = "^6.1.0"
minio = "^7.2.12"
dvc = {extras = ["s3"], version = "^3.58.0"}
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '\.venv|app/grpc/generated'

[tool.ruff]
exclude = [
    ".venv/*",
    "app/grpc/generated/*.py"
]
